# Selene

./: .gitignore  CMakeLists.txt  README.md  Selenepch.h
Core/: CMakeLists.txt
Core/lib/glad/: CMakeLists.txt
Core/lib/glad/include/glad/: glad.h
Core/lib/glad/src/: glad.c
Selene/: CMakeLists.txt
Selene/shader/: fragmentShader.frag  vertexShader.vert
Selene/src/: Main.cpp
